# ajen

./: .editorconfig  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
crates/ajen-core/: Cargo.toml
crates/ajen-core/src/: lib.rs
crates/ajen-core/src/traits/: budget_tracker.rs  comms_bus.rs  company_store.rs  conversation_store.rs  event_bus.rs  memory_store.rs  mod.rs  provider.rs  tool.rs
crates/ajen-core/src/types/: budget.rs  director.rs  employee.rs  event.rs  manifest.rs  memory.rs  message.rs  mod.rs  provider.rs  tool.rs
crates/ajen-engine/: Cargo.toml
crates/ajen-engine/src/: context.rs  lib.rs
crates/ajen-engine/src/director/: mod.rs
crates/ajen-engine/src/employee/: factory.rs  mod.rs  roles.rs  runtime.rs
crates/ajen-engine/src/infra/: budget_tracker.rs  comms_bus.rs  company_store.rs  conversation_store.rs  event_bus.rs  memory_store.rs  mod.rs
crates/ajen-engine/src/manifest/: mod.rs  parser.rs  registry.rs
crates/ajen-provider/: Cargo.toml
crates/ajen-provider/src/: anthropic.rs  cost_table.rs  gemini.rs  lib.rs  model_selector.rs  ollama.rs  openai.rs  registry.rs
crates/ajen-server/: Cargo.toml
crates/ajen-server/src/: auth.rs  main.rs  state.rs  tunnel.rs
crates/ajen-server/src/routes/: companies.rs  mod.rs
crates/ajen-server/src/ws/: stream.rs
crates/ajen-tools/: Cargo.toml
crates/ajen-tools/src/: lib.rs  registry.rs
crates/ajen-tools/src/tools/filesystem/: list_directory.rs  mod.rs  read_file.rs  write_file.rs
employee-manifests/backend-dev/: PERSONA.md  manifest.yaml
employee-manifests/ceo/: PERSONA.md  manifest.yaml
employee-manifests/cmo/: PERSONA.md  manifest.yaml
employee-manifests/content-writer/: PERSONA.md  manifest.yaml
employee-manifests/coo/: PERSONA.md  manifest.yaml
employee-manifests/cto/: PERSONA.md  manifest.yaml
employee-manifests/data-analyst/: PERSONA.md  manifest.yaml
employee-manifests/designer/: PERSONA.md  manifest.yaml
employee-manifests/devops/: PERSONA.md  manifest.yaml
employee-manifests/frontend-dev/: PERSONA.md  manifest.yaml
employee-manifests/fullstack-dev/: PERSONA.md  manifest.yaml
employee-manifests/qa-engineer/: PERSONA.md  manifest.yaml
employee-manifests/seo-specialist/: PERSONA.md  manifest.yaml
employee-manifests/social-media/: PERSONA.md  manifest.yaml
