[package]
name = "ajen-provider"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
ajen-core = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
