[package]
name = "ajen-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
ajen-engine = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
dotenvy = { workspace = true }
clap = { version = "4", features = ["derive", "env"] }
rand = "0.9"
hex = "0.4"
open = "5"
urlencoding = "2"
