[package]
name = "ajen-tools"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
ajen-core = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
